--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
         </div>
 
         <div class="photo-gallery">
-            <img src="c:\Users\yassin\Downloads\WhatsApp Image 2025-02-14 at 19.55.11.jpeg" alt="Our Memory 1">
-            <img src="c:\Users\yassin\Downloads\WhatsApp Image 2025-02-14 at 21.37.18.jpeg" alt="Our Memory 2">
-            <img src="c:\Users\yassin\Downloads\WhatsApp Image 2025-02-14 at 21.37.35.jpeg" alt="Our Memory 3">
+            <img src="image1.jpeg" alt="Our Memory 1">
+            <img src="image2.jpeg" alt="Our Memory 2">
+            <img src="image3.jpeg" alt="Our Memory 3">
         </div>
 
         <button onclick="revealMessage()">💌 Open Your Special Surprise</button>
