--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="video-container">
                 <div class="video-wrapper">
                     <video id="loveVideo" controls>
-                        <source src="c:\Users\yassin\Downloads\Romantic Animated Love Story  Animated Love Greeting  Whatsapp Love Status Video.mp4" type="video/mp4">
+                        <source src="love-video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
